@@ -23,6 +23,7 @@ no_index:
     - xt
 requires:
   Error::Pure: 0.31
+  Error::Pure::ANSIColor: 0.29
   Error::Pure::Always: 0.06
   Error::Pure::HTTP: 0.14
   Error::Pure::HTTP::JSON: 0.05
