@@ -8,6 +8,29 @@ SEE ALSO
     Error::Pure
         Perl module for structured errors.
 
+    Error::Pure::ANSIColor
+        Error::Pure modules with Term::ANSIColor support.
+
+    Error::Pure::ANSIColor::AllError
+        Error::Pure module with full backtrace.
+
+    Error::Pure::ANSIColor::Die
+        Error::Pure module with classic die.
+
+    Error::Pure::ANSIColor::Error
+        Error::Pure module with error on one line with informations.
+
+    Error::Pure::ANSIColor::ErrorList
+        Error::Pure module with list of errors in one line with
+        informations.
+
+    Error::Pure::ANSIColor::Print
+        Error::Pure module for simple error print.
+
+    Error::Pure::ANSIColor::PrintVar
+        Error::Pure module for simple error print with all variables with
+        ANSIColor support.
+
     Error::Pure::AllError
         Error::Pure module with full backtrace.
 
