@@ -1,4 +1,5 @@
 0.04
+ - Add Error::Pure::ANSIColor dist.
  - Fix Makefile.PL fails with no '.' in @INC.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Move bugtracker to github.
